# FooTube

./: README.md  package-lock.json  package.json
WIKI/: wiki.md
c++ server/: App.h  CMakeLists.txt  recommendation_server.cpp
sever/: auth.js  db.js  package-lock.json  package.json  seed.js  server.js
sever/controllers/: userController.js  videoController.js
sever/models/: Video.js  users.js
sever/routes/: userRoutes.js  videoRoutes.js
sever/services/: userServices.js  videoService.js
webapp/: package-lock.json  package.json
webapp/src/: App.js  DarkModeContext.js  Mainpage.js
webapp/src/LeftMenu/: Itemslist.css  LeftMenu.js  Menubutton.js
webapp/src/Sign/: Sign.css  Signin.js  Signup.js
webapp/src/Topbar/: Menu.css  Menu.js  Quicksearch.css  Quicksearch.js  SearchBar.js  Searchbar.css  Usericon.js
webapp/src/UserVideos/: Addingvideo.css  Addingvideo.js  Myvideos.js  myvideos.css
webapp/src/Videowatch/: Comments.css  Comments.js  LeftVideos.js  Singlevideo.css  Singlevideo.js  Videodisplay.js  Videowatch.js  videostyle.css
webapp/src/contexts/: AppProvider.js  UserContext.js  VideoContext.js
webapp/src/data/: buttons.json  userbuttons.json  videos.json
webapp/src/videoItem/: Card.css  VideoItem.js  Videolist.js
